# bible

./: Cargo.toml  README.md
src/: lib.rs  reader.rs  util.rs
tests/: test.rs
