[package]
name = "bible"
version = "0.1.1"
edition = "2024"
license = "GPL-2.0-or-later"
description = "Use the Bible in Rust"
repository = "https://github.com/stephenkingston/bible"
exclude = ["/xml", "src/bin/preprocess.rs"]

[dependencies]
bincode = "2.0.1"
serde_json = "1.0.140"
walkdir = "2.5.0"
xmltree = "0.11.0"
zip = "2.6.1"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "bible"
path = "src/bin/bible.rs"

[features]
english-kjv = []
english-asv = []
default = ["english-kjv"]

